crates/test-files/fixtures/compile_errors/duplicate_field_in_contract.fe
contract Foo {
    bar: u8
    bar: u8
}
